Correcion de Detalles
- Actualizado Titulo en Modal
- Modificacion en Minimos y Maximos (Niños y Adultos)
- Boton para cerrar lista del historico
- Correciones en el input de Busqueda de historicos
- Se desactivaron los Validadores [Valid] de Telefono y Email
- En cuanto se realiza una reserva/walk in nuevo , se actualiza la tabla detras
- Bloquear POST si no se a puesto numero de habitacion y Nombre del huesped

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+#BackEnd
+/backend
+
 # compiled output
 /dist
 /tmp
@@ -52,3 +55,8 @@ src/assets
 # System Files
 .DS_Store
 Thumbs.db
+.gitignore
+
+#firebase
+.firebase
+
