--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ backend
 *.cache
 
 metronic-front.rar
+
+.github/workflows/firebase-hosting-merge.yml
+
+.github/workflows/firebase-hosting-pull-request.yml
