--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@angular/platform-browser": "~11.0.0",
         "@angular/platform-browser-dynamic": "~11.0.0",
         "@angular/router": "~11.0.0",
+        "@auth0/angular-jwt": "^5.0.2",
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@ng-bootstrap/ng-bootstrap": "^9.1.0",
         "@ngx-translate/core": "^13.0.0",
@@ -38,6 +39,7 @@
         "express": "^4.17.1",
         "highlight.js": "^10.4.0",
         "highlightjs-line-numbers.js": "^2.8.0",
+        "jwt-decode": "^3.1.2",
         "mogoose": "0.0.1-security",
         "moment": "^2.27.0",
         "mongoose": "^5.12.7",
