--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "ngx-clipboard": "^13.0.1",
         "ngx-highlightjs": "^4.1.3",
         "ngx-perfect-scrollbar": "^9.0.0",
+        "nodemailer": "^6.6.5",
         "object-path": "^0.11.4",
         "perfect-scrollbar": "^1.5.0",
         "rxjs": "~6.6.0",
