--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "highlight.js": "^10.4.0",
         "highlightjs-line-numbers.js": "^2.8.0",
         "jwt-decode": "^3.1.2",
+        "luxon": "^2.1.1",
         "mogoose": "0.0.1-security",
         "moment": "^2.27.0",
         "mongoose": "^5.12.7",
