--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
         "@auth0/angular-jwt": "^5.0.2",
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+        "@ng-idle/core": "^11.1.0",
+        "@ng-idle/keepalive": "^11.0.3",
         "@ngx-translate/core": "^13.0.0",
         "angular-in-memory-web-api": "^0.11.0",
+        "angular2-moment": "^1.9.0",
         "apexcharts": "^3.20.0",
         "body-parser": "^1.19.0",
         "bootstrap": "^4.6.0",
