--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
+    "strictjectionParameters": true
   }
 }
