--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@angular/common": "~11.0.0",
         "@angular/compiler": "~11.0.0",
         "@angular/core": "~11.0.0",
+        "@angular/fire": "6.1.5",
         "@angular/forms": "~11.0.0",
         "@angular/localize": "~11.0.0",
         "@angular/material": "^11.0.0",
@@ -40,6 +41,7 @@
         "clipboard": "^2.0.6",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "firebase": "8.10.0",
         "highlight.js": "^10.4.0",
         "highlightjs-line-numbers.js": "^2.8.0",
         "jwt-decode": "^3.1.2",
@@ -82,7 +84,7 @@
         "protractor": "~7.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
-        "typescript": "~4.0.2",
+        "typescript": "^4.0.5",
         "webpack-cli": "^3.3.12",
         "webpack-messages": "^2.0.4",
         "webpack-rtl-plugin": "^2.0.0"
